# partages-cu2-encoder-baseline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yml  config_dp.yml
data/: label_freq_dict_dp.pkl  valid_labels_all_das.pkl  valid_labels_all_dp.pkl  valid_labels_all_mdp.pkl  valid_labels_dp.pkl
docs/: architecture.mmd  data.md  inference.md  preprocessing.md  training.md
notebooks/: build_dataset.ipynb  inference.ipynb  prepocess_MISTRAL.ipynb  prepocess_MISTRAL_test.ipynb  preprocess_PARHAF.ipynb  preprocess_synonyms.ipynb  valid_labels.ipynb
scripts/: _common.py  build_labels.py  preprocess_mistral.py  preprocess_parhaf.py  preprocess_synonyms.py
