[project]
name = "encoder-baseline"
version = "0.1.0"
description = "CU2 encoder baseline: CamembertV2 + EDS-NLP doc_classifier for document-level ICD-10 (CIM-10) coding of French clinical notes (PARTAGES project)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "edsnlp",
    "torch==2.4.1+cu121",
]

# edsnlp is pinned to the `classif_head` fork: the eds.doc_classifier / eds.doc_pooler
# components and the eds.doc_classif metric only exist on that branch.
[tool.uv.sources]
edsnlp = { git = "https://github.com/aphp/edsnlp.git", rev = "classif_head" }
torch = { index = "pytorch" }

# The default index is the public PyPI. torch is pulled from the PyTorch CUDA 12.1 wheel
# index below. For another CUDA version, change the +cuXXX pin on torch and this URL
# (see https://pytorch.org/get-started/locally/).
#
# Note: the preprocessing notebooks run on the AP-HP Spark/YARN cluster and need PySpark
# plus the AP-HP-internal `edstoolbox`. These are NOT project dependencies (they are not
# on public PyPI); AP-HP users install them separately — see docs/preprocessing.md.
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "datasets>=4.8.4",
    "foldedtensor>=0.4.0",
    "ipykernel>=7.2.0",
    "rich-logger>=0.3.2",
    "tokenizers>=0.22.2",      
    "accelerate>=1.12.0",
    "confit>=0.10.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.57.3",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
]
